--- a/default.cfg
+++ b/default.cfg
@@ -1,19 +1,34 @@
 [General]
-XlBridgeTimeout=120
+AutomaticTransactions=1
+AutomaticTransactionsPerFunc=0
+ContinueOnError=0
 DefaultRunLogic=default.usp
-[ThinkTime]
-Options=NOTHINK
-Factor=1
-LimitFlag=0
-Limit=1
+FailTransOnErrorMsg=0
+Replay64bit=0
+UseThreads=1
+XlBridgeTimeout=120
 [Iterations]
-NumOfIterations=1
 IterationPace=IterationASAP
-StartEvery=60
-RandomMin=60
+NumOfIterations=1
 RandomMax=90
+RandomMin=60
+StartEvery=60
 [Log]
-LogOptions=LogBrief
-MsgClassData=0
-MsgClassParameters=0
-MsgClassFull=0
+AutoLog=0
+AutoLogBufferSize=1
+IncludeEnvInfo=1
+LogDetail=1
+LogOptions=LogExtended
+MsgClassData=1
+MsgClassFull=1
+MsgClassParameters=1
+PrintTimeStamp=1
+[ThinkTime]
+Factor=1
+Limit=1
+LimitFlag=1
+Options=RECORDED
+ThinkTimeRandomHigh=150
+ThinkTimeRandomLow=50
+[WEB]
+SnapshotOnErrorActive=0
